...
    
    var body: some View {
        NavigationView {
            Form {
                // TITLE & DESCRIPTION
                Section {
                    TextField("Enter title...", text: $title)
                    
                    TextEditor(text: $desc)
                        .frame(height: 80)
                        .onChange(of: desc) {newValue in
                            desc=newValue.appendingDashIfNeeded(previous: oldDesc)
                            oldDesc = desc
...
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel") {
                        dismiss()
                    }
                }
                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        addTask()
                    }
                }
            }
            .alert("No Title", isPresented: $showEmptyTitleAlert) {
                Button("OK", role: .cancel) {}
...
